# mini-Vim

./: CMakeLists.txt  README.md  README.txt  a.out  demo2.txt  demo3.txt
include/: trie.h
src/: main.cpp
